# egos-sdk-esp32s3

./: .gitignore  CMakeLists.txt  Kconfig  README.md
examples/basic_buttons/: CMakeLists.txt
examples/basic_buttons/main/: CMakeLists.txt  main.c
include/: egos_sdk.h
src/: egos_connection.c  egos_ethernet.c  egos_internal.h  egos_led.c  egos_mqtt.c  egos_nvs.c  egos_sdk.c  egos_wifi.c
